--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,10 @@ h2,h5{
     border-radius: 0;
 }
 
+.btn>a{
+    color: #1B1B1B;
+}
+
 a{
     text-decoration: none;
 }
@@ -57,5 +61,3 @@ a{
 footer{
     background-color: #212121;
 }
-
-
