--- a/styles.css
+++ b/styles.css
@@ -36,13 +36,9 @@ h2,h5{
 
 .btn{
     background-color: #A7D129;
-    color: #1B1B1B;
     border: none;
     font-weight: 700;
     border-radius: 0;
-}
-
-.btn>a{
     color: #1B1B1B;
 }
 
@@ -63,6 +59,26 @@ a{
     background-color: #2d2d2d;
 }
 
-footer{
+.list-group-item-action:active, .list-group-item-action.active {
+    background-color: #77961a; 
+    color: rgb(248, 248, 248); 
+  }
+
+  .list-group-item-action:hover {
+    background-color: #77961a; 
+    color: rgb(248, 248, 248)
+  }
+
+  .btn:active, .btn.active {
+    background-color: #77961a; 
+    color: rgb(248, 248, 248)
+  }
+
+  .btn:hover {
+    background-color: #77961a; 
+    color: rgb(248, 248, 248)
+  }
+
+  footer{
     background-color: #212121;
 }
